 * Changed default views to allow null values and so subjects does not have
    a sub-field. 
 * Fixed typo in epadmin --help

======================================================================
EPRINTS-3.1.0-rc-3
======================================================================
 
2008-08-06 tdb
 * Removing all Admin-configured fields will also remove the 'Misc.' stage,
    fixing 3415
 * Don't dispose scalars returned by Export->export, fixing #3420
 * Escape arguments in Repository::invocation

2008-08-06 cjg
 * Added "permute" option to all bin scripts to allow --verbose etc. to be
    added on the end.
 * Changed -c in gunzip to the first argument in import test data -- this 
    stops a bug which shows up in POSIX compliant mode.

======================================================================
EPRINTS-3.1.0-rc-4
======================================================================
 
2008-08-07 tdb
 * Added "page" to Session::get_url/URL::get_url
 * Added Plugin::icon_url and Screen::action_icon_url methods
 * Use ->icon_url and ->action_icon_url to get icon URLs, fixing #3354

2008-08-08 tdb
 * OAI now searches for the eprint in archive or deletion, fixing #3424
 * OAI GetRecord no longer errors on an invalid identifier, fixing #3423

======================================================================
EPRINTS-3.1.0-rc-5
======================================================================

2008-08-11 tdb
 * Indexer should now stop if asked to stop while busy

======================================================================
EPRINTS-3.1.0-rc-6
======================================================================

2008-08-20 tdb
 * input_rows is specific to certain field types

2008-09-08 cjg
 * added srand to improve randomness of login cookies.

======================================================================
EPRINTS-3.1.0
======================================================================